pms/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-nginx-hello
  namespace: app
spec:
  rules:
    -
      http:
        paths:
          -
            backend:
              service:
                name: hello
                port: 
                  number: 80
            path: /
            pathType: Prefix
